--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "bootstrap": "^4.5.2",
+    "cart-localstorage": "^1.1.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "rxjs": "~6.4.0",
